--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,396 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>Osumar</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <title>Osumar</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root></app-root>
+    <app-root></app-root>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="https://tse1.mm.bing.net/th?id=OIP.fo8LCyCn396RvFG4nqqzqQHaDF&pid=Api&P=0&h=180" alt="Logo">
+        </div>
+        <button class="contact-button">Contact Us</button>
+    </nav>
+
+    <div class="sections">
+        <!-- Previous sections here -->
+        <section id="section1" class="center-content">
+            <h1>Elevate <b style="color:blue;">Real Estate Success</b> with Osumare's Digital Expertise</h1>
+            <p>Tailored Solutions for Thriving in the Digital Real Estate Landscape</p>
+            <button class="get-started-button">Get Started</button>
+            <br>
+            <img src="https://images.pexels.com/photos/270012/pexels-photo-270012.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Real Estate" class="section-image1">
+        </section>
+        <section id="section2" class="center-content">
+            <h2>Real Estate-Focused Digital Mastery</h2>
+            <br>
+            <div class="section-content">
+                <img src="https://images.pexels.com/photos/270012/pexels-photo-270012.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Real Estate" class="section-image2">
+                <div class="contact-info">
+                    <h3>Unlock the Potential of Digital Real Estate Excellence</h3>
+                    <p> At Osumare, we understand that the real estate landscape demands a digital presence that aligns with the intricacies of property marketing. Our range of specialized services is meticulously designed to catapult your brand's success
+                        in the ever-evolving digital property market.</p>
+                    <button class="get-started-button">Get Started</button>
+                </div>
+            </div>
+        </section>
+        <section id="section3" class="center-content">
+            <h3>Our Service Offerings</h3>
+            <p>Strategies that Drive Property Market Excellence</p>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <div class="icon-container">
+                        <fa-icon [icon]="playIcon" style="color: blue;"></fa-icon>
+                    </div>
+                    <h3>Automotive SEO</h3>
+                    <p>Drive Your Success with Automotive SEO: Ignite Online Visibility and Outrace the Competition. Accelerate Your Business Growth Today</p>
+                </div>
+                <div class="grid-item">
+                    <div class="icon-container">
+                        <fa-icon [icon]="arrow" style="color: blue;"></fa-icon>
+                    </div>
+                    <h3>PPC Precision</h3>
+                    <p>Maximize visibility and drive quality traffic with meticulously targeted Pay-Per-Click campaigns.</p>
+                </div>
+
+                <div class="grid-item">
+                    <div class="icon-container">
+                        <fa-icon [icon]="faCloud" style="color: blue;"></fa-icon>
+                    </div>
+                    <h3>Social Acceleration</h3>
+                    <p> Engage and influence your audience across social media platforms, amplifying your brand's presence and connection.</p>
+                </div>
+
+                <div class="grid-item">
+                    <div class="icon-container">
+                        <fa-icon [icon]="playIcon" style="color: blue;"></fa-icon>
+                    </div>
+                    <h3>Content Excellence</h3>
+                    <p>Craft compelling, automotive-specific content that resonates with enthusiasts and drives engagement.</p>
+                </div>
+
+                <div class="grid-item">
+                    <div class="icon-container">
+                        <fa-icon [icon]="faFolder" style="color: blue;"></fa-icon>
+                    </div>
+                    <h3>Web Design</h3>
+                    <p>Transform visitors into customers with high-performance websites designed for seamless user experiences and increased conversions.</p>
+                </div>
+                <div class="grid-item">
+                    <div class="icon-container">
+                        <fa-icon [icon]="playIcon" style="color: blue;"></fa-icon>
+                    </div>
+                    <h3>Data-Driven Insights</h3>
+                    <p>Leverage data to refine your strategies, making informed decisions that drive revenue growth.</p>
+                </div>
+                <div class="grid-item">
+                    <div class="icon-container">
+                        <fa-icon [icon]="playIcon" style="color: blue;"></fa-icon>
+                    </div>
+                    <h3>End-to-End Solutions</h3>
+                    <p>Drive Your Success with Automotive SEO: Ignite Online Visibility and Outrace the Competition. Accelerate Your Business Growth Today</p>
+                </div>
+                <div class="grid-item">
+                    <div class="icon-container">
+                        <fa-icon [icon]="playIcon" style="color: blue;"></fa-icon>
+                    </div>
+                    <h3>Video marketing</h3>
+                    <p>Unleash the Power of Video Marketing: Captivate, Engage, and Elevate Your Brand with Compelling Visual Stories.</p>
+                </div>
+            </div>
+            <br>
+            <button class="get-started-button">Get Started</button>
+        </section>
+        <section id="section4" class="center-content">
+            <h2>Navigating Real Estate's Digital Landscape</h2>
+            <p>Insights for Real Estate Marketing Advantage</p>
+            <div class="row-container">
+                <div class="col1">
+                    <div class="content-box">
+                        <h3>Market Trends Analysis</h3>
+                        <p>Predictive insights to guide real estate strategies.</p>
+                    </div>
+                    <div class="content-box">
+                        <h3>Targeted Buyer Persona</h3>
+                        <p>Understand and connect with your ideal property buyers.</p>
+                    </div>
+                    <div class="content-box">
+                        <h3>Competitor Insights</h3>
+                        <p>Stand out in the property market with informed strategies.</p>
+                    </div>
+                    <div class="content-box">
+                        <h3>Visual Content Appeal </h3>
+                        <p>Captivate buyers with appealing visuals and immersive experiences.</p>
+                    </div>
+                </div>
+                <div class="col2">
+                    <div class="image-box">
+                        <img src="https://images.pexels.com/photos/270012/pexels-photo-270012.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Real Estate Innovations">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section5">
+            <div class="container5">
+                <div class="row1">
+                    <h2> Driving Property Inquiries to Conversions</h2>
+                    <p>Streamlined Strategies for Real Estate Success</p>
+                </div>
+                <div class="row2">
+                    <div class="col">
+                        <img src="your_image_url" alt="Image">
+                    </div>
+                    <div class="col" style="text-align: left;">
+                        <h3>Optimized Path to Property Purchase</h3>
+                        <p style="text-align: left;">In the dynamic realm of real estate, the journey from a property inquiry to a successful conversion demands a well-crafted approach. At Osumare, we specialize in guiding potential buyers through this journey seamlessly, maximizing
+                            inquiries-turned-conversions with expert strategies.</p>
+                        <button class="get-started-button">Get Started</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="section6">
+            <h2>Driving Property Inquiries to Conversions</h2>
+            <div class="container1">
+
+                <div class="grid-col">
+                    <div class="grid-row">
+                        <div class="grid-item">
+                            <div class="icon-container">
+                                <fa-icon [icon]="playIcon" style="color: blue;"></fa-icon>
+                            </div>
+                            <h3>Call-to-Action Optimization</h3>
+                            <p>Our carefully crafted CTAs guide potential buyers through the property journey, enhancing engagement and conversion rates.</p>
+                        </div>
+                    </div>
+
+                    <div class="grid-row">
+                        <div class="grid-item">
+                            <div class="icon-container">
+                                <fa-icon [icon]="playIcon" style="color: blue;"></fa-icon>
+                            </div>
+                            <h3>Social Proof Utilization</h3>
+                            <p>Leverage the power of testimonials and success stories from satisfied buyers to build trust and credibility, encouraging hesitant prospects to take action</p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="grid-col">
+
+                    <div class="grid-row">
+                        <div class="grid-item">
+                            <div class="icon-container">
+                                <fa-icon [icon]="playIcon" style="color: blue;"></fa-icon>
+                            </div>
+                            <h3>Landing Page Efficiency</h3>
+                            <p>Tailored landing pages are designed for maximum property lead conversion. They provide seamless user experiences and clear pathways for inquiry submission.</p>
+                        </div>
+                    </div>
+                    <div class="grid-row">
+                        <div class="grid-item">
+                            <div class="icon-container">
+                                <fa-icon [icon]="playIcon" style="color: blue;"></fa-icon>
+                            </div>
+                            <h3>Mobile-Friendly Experience</h3>
+                            <p>With a responsive design approach, our strategies ensure a seamless browsing experience across all devices. This responsiveness enhances engagement and conversions by accommodating the preferences of on-the-go property seekers.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section7">
+            <h2>Our Expertise in Action</h2>
+            <div class="container1">
+
+                <div class="grid-col">
+                    <div class="grid-row">
+                        <div class="grid-item">
+                            <div class="icon-container">
+                                <fa-icon [icon]="playIcon" style="color: blue;"></fa-icon>
+                            </div>
+                            <h3>Effective CTAs</h3>
+                            <p> See how our strategic CTAs drove a significant increase in property inquiries and accelerated sales for a real estate agency.</p>
+                        </div>
+                    </div>
+                    <div class="grid-row">
+                        <div class="grid-item">
+                            <div class="icon-container">
+                                <fa-icon [icon]="playIcon" style="color: blue;"></fa-icon>
+                            </div>
+                            <h3>Trust Building with Social Proof</h3>
+                            <p>Discover how leveraging client testimonials boosted buyer confidence, leading to higher conversion rates for a property development project</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-col">
+                    <div class="grid-row">
+                        <div class="grid-item">
+                            <div class="icon-container">
+                                <fa-icon [icon]="playIcon" style="color: blue;"></fa-icon>
+                            </div>
+                            <h3>Conversion-Optimized Landing Pages</h3>
+                            <p>Explore a case study where our landing page optimization increased property lead conversion rates by 30%</p>
+                        </div>
+                    </div>
+                    <div class="grid-row">
+                        <div class="grid-item">
+                            <div class="icon-container">
+                                <fa-icon [icon]="playIcon" style="color: blue;"></fa-icon>
+                            </div>
+                            <h3>Mobile-First Success:</h3>
+                            <p> Learn how our mobile-responsive design approach resulted in a 25% increase in inquiries from mobile users for a real estate agency.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section8" class="center-content">
+            <h1>Your Peace of Mind</h1>
+            <p>Through our conversion-focused strategies, we ensure that property seekers are not just visitors, but engaged prospects ready to make their next move in the real estate market
+            </p>
+            <button class="get-started-button">Get Started</button>
+
+        </section>
+        <section id="section9">
+            <div class="container9">
+                <div class="row1">
+                    <h3>What Our Pharma Partners Say</h3>
+                    <p>Driving Transformations, One Brand at a Time</p>
+                </div>
+                <div class="row2">
+                    <div class="col">
+                        <img src="your_image_url" alt="Image">
+                    </div>
+                    <div class="col" style="text-align: left;">
+                        <h3>Tabish khan</h3>
+                        <p>Osumare's expertise in pharma marketing is unparalleled. Their strategies helped us navigate complex regulations while driving remarkable growth.</p>
+                    </div>
+                </div>
+                <div class="row3">
+                    <h3>Frequently Asked Questions</h3>
+                    <p>Pinpoint your audience with precision, ensuring your marketing efforts reach those most likely to engage with your brand.</p>
+                    <select>
+                    <option value="option1">3. How does Osumare measure campaign success?</option>
+                    <option value="option2">3. How does Osumare measure campaign success?</option>
+                    <option value="option3">3. How does Osumare measure campaign success?</option>
+
+                </select>
+                </div>
+            </div>
+        </section>
+
+        <section id="section11">
+            <div class="container11">
+                <div class="row">
+                    <h3>Connect with Our Digital Marketing Experts</h3>
+                    <br>
+
+                    <p>Reach Out for Tailored Strategies and Results-Driven Solutions. Let's Elevate Your Online Presence Together</p>
+                </div>
+                <div class="row12" style="border: black solid 1px; padding: 40px;">
+                    <div class="col11">
+                        <form>
+                            <label for="name">Name:</label>
+                            <input type="text" id="name" name="name" required>
+                            <label for="email">Email:</label>
+                            <input type="email" id="email" name="email" required>
+                            <label for="phone">Phone:</label>
+                            <input type="tel" id="phone" name="phone" required>
+                        </form>
+                    </div>
+                    <div class="col12">
+                        <form>
+                            <label for="message">Message:</label>
+                            <textarea id="message" name="message" rows="5" required></textarea>
+                        </form>
+                    </div>
+                </div>
+                <button class="get-started-button">Get Started</button>
+            </div>
+        </section>
+
+
+
+
+        <section id="section10">
+            <div class="container">
+                <div class="col1-1">
+                    <div class="logo">
+                        <img src="https://tse1.mm.bing.net/th?id=OIP.fo8LCyCn396RvFG4nqqzqQHaDF&pid=Api&P=0&h=180" alt="Logo">
+                    </div>
+                    <p>The best digital marketing agency in Pune with a<br> proven track record of consistently delivering <br>quality service.</p>
+                    <b>Address</b>
+                    <p>City, Country Survey No. 43, Pathare<br> Thube Nagar, Nagar
+                        <br> Road, Kharadi, Pune-14,<br> Maharastra, India.</p>
+
+
+                    <b>Contacts</b>
+
+                    <p>
+                        <fa-icon [icon]="Envelope" />helloosumare.in
+                    </p>
+                    <p>
+                        <fa-icon [icon]="phone" />+91 8459 8762 26
+                    </p>
+
+                </div>
+                <div class="col2-2">
+
+                    <div class="menu">
+
+                        <ul>
+                            <li><b>Menu</b></li>
+                            <li>
+                                Home
+                            </li>
+
+                            <li>About</li>
+                            <li>Services</li>
+                            <li>Work</li>
+                            <li>Blog</li>
+                            <li>Career</li>
+
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="col3">
+
+                    <div class="social-icons">
+                        <b>Social</b>
+                        <br>
+                        <a href="#">
+                            <fa-icon [icon]="Envelope" />
+                        </a>
+                        <br>
+                        <a href="#">
+                            <fa-icon [icon]="Envelope" />
+
+                        </a>
+                        <br>
+                        <a href="#">
+                            <fa-icon [icon]="Envelope" />
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+
+
+        </section>
+        <footer>
+            <p>© 2023 Osumare. All rights reserved.</p>
+        </footer>
+
+
+    </div>
 </body>
+
 </html>
